src/tests/testfiles/function-declarations/11.txt
Error at 3:5: Function 'sum' used before it was declared
sum(1, 2);
^
